# llm-from-scratch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-label.yml  generate_github_workflows.py  pr-test.yml  pr-test.yml.j2  slash-run-ci.yml  test-qwen3-cpu.yml  test-qwen3-cuda.yml  test-qwen3-moe-cpu.yml  test.yml
gpt_oss/: README.md  config.py  generate.py  layers.py  main.py  model.py  tokenizer.py  weights.py
parallel/: __init__.py  comm.py  readme.md  tensor.py
qwen3/: README.md  config.py  generate.py  layers.py  main.py  model.py  pyproject.toml  tokenizer.py  weights.py
qwen3/tests/: test_generate.py
qwen3_moe/: README.md  config.py  generate.py  layers.py  main.py  model.py  tokenizer.py  weights.py
scripts/: compare_hf.py  download.sh  download_qwen3.sh  inspect_model.py
tests/: accuracy_runner.py  conftest.py  knowledge_runner.py  utils.py
tests/gpt_oss/: test_accuracy.py  test_knowledge.py
tests/qwen3/: test_accuracy.py  test_generate.py  test_knowledge.py
tests/qwen3_moe/: test_accuracy.py  test_generate.py  test_knowledge.py
