[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "From-scratch PyTorch implementations of popular LLM architectures"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "safetensors",
    "tokenizers",
    "jinja2",
]

[project.optional-dependencies]
download = ["huggingface_hub"]
test = ["pytest"]

[tool.pytest.ini_options]
markers = ["slow: run full model inference (requires checkpoints)"]
