[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "From-scratch PyTorch implementations of popular LLM architectures"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
    "safetensors",
    "tokenizers",
    "jinja2",
    "tiktoken",
]

[project.optional-dependencies]
test = ["pytest", "transformers", "huggingface_hub"]

[tool.pytest.ini_options]
markers = ["slow: run full model inference (requires checkpoints)"]
